hphp/hack/test/typecheck/new_inference/typehole/lambda_with_invoke.php.exp
File "lambda_with_invoke.php", line 21, characters 36-37:
Was expecting an object but type is unknown (Typing[4297])
File "lambda_with_invoke.php", line 21, characters 29-30:
It is unknown because the type of the lambda parameter could not be determined. Please add a type hint to the parameter
